need to check views

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://aprendiendocalculo.com/portal1/themes/alertify.core.css"
     />
@@ -17,7 +17,7 @@
     <script
       type="text/javascript"
       src="https://aprendiendocalculo.com/portal1/lib/alertify.js"
-    ></script>
+    ></script> -->
   </head>
   <body>
     <app-root></app-root>
