--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,12 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://aprendiendocalculo.com/portal1/themes/alertify.core.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://aprendiendocalculo.com/portal1/themes/alertify.default.css"
-    />
-    <script
-      type="text/javascript"
-      src="https://aprendiendocalculo.com/portal1/lib/alertify.js"
-    ></script> -->
   </head>
   <body>
     <app-root></app-root>
+    <script
+      src="https://widget.cloudinary.com/v2.0/global/all.js"
+      type="text/javascript"
+    ></script>
   </body>
 </html>
